feat: add api key auth process
